<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rectangle_1"
    app:cardBackgroundColor="@color/white"
    app:strokeWidth="1dp"
    app:strokeColor="@color/white"
    android:elevation="30dp"
    android:layout_margin="20dp"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/Relative_layout"
        android:padding="10dp" >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/profile"
            android:elevation="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </de.hdodenhof.circleimageview.CircleImageView>

        <TextView
            android:id="@+id/this_is_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:layout_marginStart="10dp"
            android:text="@string/this_is_a_salfe_made_message"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            app:layout_constraintLeft_toRightOf="@id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView">

        </TextView>

        <TextView
            android:id="@+id/i_can_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins"
            android:text="@string/i_can_send_you_message_too"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/this_is_a"
            app:layout_constraintTop_toBottomOf="@id/this_is_a">

        </TextView>

        <TextView
            android:id="@+id/august_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/_2_aug_2022"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
            app:layout_constraintBottom_toBottomOf="@+id/this_is_a"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/this_is_a">

        </TextView>

        <TextView
            android:id="@+id/am"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/_09_00am"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
            app:layout_constraintBottom_toBottomOf="@+id/i_can_send"
            app:layout_constraintEnd_toEndOf="@+id/august_2"
            app:layout_constraintTop_toTopOf="@+id/i_can_send">

        </TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
